--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
   "name": "RonsLandscaping",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "animate.css": "^3.6.1",
+    "bootstrap": "4.0.0-beta.2",
+    "font-awesome": "^4.7.0",
+    "gmaps": "^0.4.24",
+    "hamburgers": "^0.9.3",
+    "jquery": "3.2.1",
+    "jquery-migrate": "^3.0.1",
+    "jquery.easing": "^1.4.1",
+    "popper.js": "^1.12.3",
+    "simple-line-icons": "^2.4.1",
+    "slick-carousel": "^1.8.1"
+  }
 }
