--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jquery": "3.2.1",
     "jquery-migrate": "^3.0.1",
     "jquery.easing": "^1.4.1",
-    "popper.js": "^1.12.3",
+    "popper.js": "1.14.3",
     "simple-line-icons": "^2.4.1",
     "slick-carousel": "^1.8.1"
   }
