--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ RECAPTCHA_SITE_KEY = "6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"
 RECAPTCHA_SECRET_KEY = "6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe"
 SENDGRID_API_KEY = "SG.apikey"
 SENDGRID_USERNAME = "apikey"
+EMAIL_TO = "me@local.com"
